Install/5. Expose internet/1. ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: kafka-service
              port:
                number: 5601
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: grafna-service
              port:
                number: 3000
  tls:
  - hosts:
    - example.com
    secretName: example-tls-secret
